Removes github login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,15 +5,17 @@
 
   <!-- Sign in buttons -->
   <div class="container text-center">
-    <div class="row">
+    <!-- Github sign-in -->
+<!--     <div class="row">
       <div class="col">
         <a class="btn btn-outline-dark" href="/auth/github" role="button">
           <i class="fab fa-github"></i>
           Sign in with Github
         </a>
       </div>
-    </div>
+    </div> -->
     
+    <!-- Microsoft sign-in -->
     <!-- https://docs.microsoft.com/en-us/azure/active-directory/develop/howto-add-branding-in-azure-ad-apps -->
     <div class="row">
       <div class="col mt-5">
