--- a/views/console.ejs
+++ b/views/console.ejs
@@ -78,12 +78,12 @@
   <script type="text/javascript" src="https://meet.jit.si/external_api.js"></script>
 
   <!-- Socket.IO -->
-  <!-- <script src="/socket.io/socket.io.js"></script> -->
+  <script src="/socket.io/socket.io.js"></script>
 
   <!-- Custom -->
   <script type="module" defer src="/js/console.js"></script>
-  <!-- <script src="/js/keyboard.js"></script> -->
-  <!-- <script src="/js/gamepad.js"></script> -->
+  <script src="/js/keyboard.js"></script>
+  <script src="/js/gamepad.js"></script>
   <script src="/js/video.js"></script>
 </body>
 
