--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,31 +1,81 @@
-<%- include('header') -%>
+<div class="page-wrap gradient-primary">
+  <div class="container">
+    <div class="row mt-5">
+      <div class="col-md-6 m-auto">
+        <div class="card card-body">
+          <h4 class="text-center mb-3">Log in to your account</h4>
+          <%- include('./partials/messages') -%>
 
-<body>
-  <%- include('navbar') -%>
+          <!-- Github sign-in -->
+  <!--         <div class="row">
+            <div class="col">
+              <a class="btn btn-outline-dark" href="/auth/github" role="button">
+                <i class="fab fa-github"></i>
+                Sign in with Github
+              </a>
+            </div>
+          </div>
+   -->
+          <!-- Microsoft sign-in -->
+          <!-- https://docs.microsoft.com/en-us/azure/active-directory/develop/howto-add-branding-in-azure-ad-apps -->
+            <div class="col text-center">
+              <a href="/auth/azure">
+                <img src="/img/ms-symbollockup_signin_light.svg">
+              </a>
+            </div>
 
-  <!-- Sign in buttons -->
-  <div class="container text-center">
-    <!-- Github sign-in -->
-<!--     <div class="row">
-      <div class="col">
-        <a class="btn btn-outline-dark" href="/auth/github" role="button">
-          <i class="fab fa-github"></i>
-          Sign in with Github
-        </a>
-      </div>
-    </div> -->
-    
-    <!-- Microsoft sign-in -->
-    <!-- https://docs.microsoft.com/en-us/azure/active-directory/develop/howto-add-branding-in-azure-ad-apps -->
-    <div class="row">
-      <div class="col mt-5">
-        <a href="/auth/azure">
-          <img src="/img/ms-symbollockup_signin_light.svg">
-        </a>
+  <!--           <button class="microsoft-button" type="button">
+              <svg width="21" height="21" viewBox="-5 -5 21 21">
+                <rect x="5" y="5" width="9" height="9" fill="#f25022"/>
+                <rect x="5" y="16" width="9" height="9" fill="#00a4ef"/>
+                <rect x="16" y="5" width="9" height="9" fill="#7fba00"/>
+                <rect x="16" y="16" width="9" height="9" fill="#ffb900"/>
+              </svg>
+              <div class="microsoft-button-text">
+                <div class="microsoft-text">Log in with Microsoft</div>
+              </div>
+            </button>
+   -->
+          <hr/>
+
+          <form action="/auth/login" method="POST">
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-user"></i></span>
+                </div>
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  class="form-control"
+                  placeholder="Email address"
+                  required
+                />
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                </div>
+                <input
+                  type="password"
+                  id="password"
+                  name="password"
+                  class="form-control"
+                  placeholder="Password"
+                  required
+                />
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Login</button>
+          </form>
+          <p class="lead mt-4 text-center">
+            Don't have an account? <a href="/register">Sign Up</a>
+          </p>
+        </div>
       </div>
     </div>
   </div>
-
-</body>
-
-</html>
+</div>
