Uses forms to add devices

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -54,3 +54,17 @@
 
   </div>
 </div>
+
+
+<!-- Jitsi-->
+<!-- https://github.com/jitsi/jitsi-meet/blob/master/doc/api.md-->
+<script type="text/javascript" src="https://meet.jit.si/external_api.js"></script>
+
+<!-- Socket.IO -->
+<script src="/socket.io/socket.io.js"></script>
+
+<!-- Custom -->
+<script type="module" defer src="/js/console.js"></script>
+<script type="text/javascript" src="/js/keyboard.js"></script>
+<script type="text/javascript" src="/js/gamepad.js"></script>
+<script type="text/javascript" src="/js/video.js"></script>
