--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,10 @@
-<div class="page-wrap gradient-primary">
-  <div class="container">
-    <div class="row mt-5">
-      <div class="col-md-6 m-auto">
-        <div class="card card-body">
-          <h4 class="text-center mb-3">Log in to your account</h4>
+<div class="container h-100">
+  <div class="row align-items-center h-100">
+    <div class="col-6 mx-auto">
+      <div class="card bg-light text-center" style="width: 26rem;">
+
+        <div class="card-body">
+          <h2 class="card-title text-center mb-5">Log in to your account</h2>
           <%- include('./partials/messages') -%>
 
           <!-- Github sign-in -->
@@ -71,9 +72,9 @@
             </div>
             <button type="submit" class="btn btn-primary btn-block">Login</button>
           </form>
-          <p class="lead mt-4 text-center">
-            Don't have an account? <a href="/register">Sign Up</a>
-          </p>
+        </div>
+        <div class="card-footer">
+          <p class="lead">Don't have an account? <a href="/register">Sign Up</a></p>
         </div>
       </div>
     </div>
