--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+body,html {
+  height: 100%;
+  /*background-image: linear-gradient(to bottom, #654a86, #534292);*/
+  /*background-color: #534292;*/
+}
+
 .chat-container {
   overflow: hidden;
 }
