--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title></title>
+  <title>Connect <%= title %></title>
   <meta charset="utf-8">
   <!-- Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -46,18 +46,5 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-  <!-- Jitsi-->
-  <!-- https://github.com/jitsi/jitsi-meet/blob/master/doc/api.md-->
-  <script type="text/javascript" src="https://meet.jit.si/external_api.js"></script>
-
-  <!-- Socket.IO -->
-  <script src="/socket.io/socket.io.js"></script>
-
-  <!-- Custom -->
-  <script type="module" defer src="/js/console.js"></script>
-  <script src="/js/keyboard.js"></script>
-  <script src="/js/gamepad.js"></script>
-  <script src="/js/video.js"></script>
 </body>
 </html>
