--- a/views/layouts/index.ejs
+++ b/views/layouts/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title></title>
+  <title>Connect <%= title %></title>
   <meta charset="utf-8">
   <!-- Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
