--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,7 +2,7 @@
   <div class="row mt-5">
     <div class="col-md-6 m-auto">
       <div class="card card-body">
-        <h1 class="text-center mb-3">Register</h1>
+        <h1 class="text-center mb-3">Create your account</h1>
         <%- include('./partials/messages') -%>
         <form action="/users/register" method="POST">
           <div class="form-group">
