--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -31,16 +31,11 @@
   <!-- Custom -->
   <link rel="stylesheet" type="text/css" href="/css/style.css" />
 </head>
-<body>
+<body class="d-flex flex-column h-100">
   <%- include('../partials/navbar') -%>
 
   <%- body %>
 
-  <!-- footer-->
-  <div class="white-text" style="position:relative">
-    <small style="position:fixed; bottom:0; width:100%; text-align:center">© 2020 hapi-robo st, Inc. — All Rights Reserved.</small>
-  </div>
-  
   <!-- JavaScript at end of body for optimized loading-->
   <!-- Bootstrap Javascript -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
