--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,74 +1,83 @@
-<div class="container">
-  <div class="row mt-5">
-    <div class="col-md-6 m-auto">
-      <div class="card card-body">
-        <h1 class="text-center mb-3">Create your account</h1>
-        <%- include('./partials/messages') -%>
-        <form action="/users/register" method="POST">
-          <div class="form-group">
-            <label for="firstName">First name</label>
-            <input
-              type="name"
-              id="firstName"
-              name="firstName"
-              class="form-control"
-              placeholder="First name"
-              value="<%= typeof firstName != 'undefined' ? firstName : '' %>"
-            />
-          </div>
-          <div class="form-group">
-            <label for="lastName">Last name</label>
-            <input
-              type="name"
-              id="lastName"
-              name="lastName"
-              class="form-control"
-              placeholder="Last name"
-              value="<%= typeof lastName != 'undefined' ? lastName : '' %>"
-            />
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              class="form-control"
-              placeholder="Enter Email"
-              value="<%= typeof email != 'undefined' ? email : '' %>"
-            />
-          </div>
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input
-              type="password"
-              id="password"
-              name="password"
-              class="form-control"
-              placeholder="Create Password"
-              minlength="8" 
-              maxlength="16" 
-              value="<%= typeof password != 'undefined' ? password : '' %>"
-            />
-          </div>
-          <div class="form-group">
-            <label for="password2">Confirm Password</label>
-            <input
-              type="password"
-              id="password2"
-              name="password2"
-              class="form-control"
-              placeholder="Confirm Password"
-              minlength="8" 
-              maxlength="16" 
-              value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
-            />
-          </div>
-          <button type="submit" class="btn btn-primary btn-block">
-            Register
-          </button>
-        </form>
-        <p class="lead mt-4 text-center">Already have an account? <a href="/login">Login</a></p>
+<div class="container h-100">
+  <div class="row align-items-center h-100">
+    <div class="col-6 mx-auto">
+
+      <div class="card bg-light" style="width: 26rem;">
+        <div class="card card-body">
+          <h1 class="text-center mb-3"><%= polyglot.t("register.greetings")%></h1>
+          <%- include('./partials/messages') -%>
+          
+          <form action="/users/register" method="POST">
+            <div class="form-group">
+              <label for="firstName"><%= polyglot.t("register.first_name")%></label>
+              <input
+                type="name"
+                id="firstName"
+                name="firstName"
+                class="form-control"
+                placeholder="<%= polyglot.t("register.first_name")%>"
+                value="<%= typeof firstName != 'undefined' ? firstName : '' %>"
+              />
+            </div>
+            <div class="form-group">
+              <label for="lastName"><%= polyglot.t("register.last_name")%></label>
+              <input
+                type="name"
+                id="lastName"
+                name="lastName"
+                class="form-control"
+                placeholder="<%= polyglot.t("register.last_name")%>"
+                value="<%= typeof lastName != 'undefined' ? lastName : '' %>"
+              />
+            </div>
+            <div class="form-group">
+              <label for="email"><%= polyglot.t("register.email")%></label>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                class="form-control"
+                placeholder="<%= polyglot.t("register.email")%>"
+                value="<%= typeof email != 'undefined' ? email : '' %>"
+              />
+            </div>
+            <div class="form-group">
+              <label for="password"><%= polyglot.t("register.password")%></label>
+              <input
+                type="password"
+                id="password"
+                name="password"
+                class="form-control"
+                placeholder="<%= polyglot.t("register.create_password")%>"
+                minlength="8" 
+                maxlength="16" 
+                value="<%= typeof password != 'undefined' ? password : '' %>"
+              />
+            </div>
+            <div class="form-group">
+              <label for="password2"><%= polyglot.t("register.confirm_password")%></label>
+              <input
+                type="password"
+                id="password2"
+                name="password2"
+                class="form-control"
+                placeholder="<%= polyglot.t("register.confirm_password")%>"
+                minlength="8" 
+                maxlength="16" 
+                value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
+              />
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">
+              Register
+            </button>
+          </form>
+        </div>
+        <div class="card-footer text-center">
+          <p class="lead"><%= polyglot.t("register.account_msg")%> <a href="/login"><%= polyglot.t("register.login")%></a></p>
+
+          <!-- Select Language -->
+          <%- include('./partials/locale') -%>
+        </div>
       </div>
     </div>
   </div>
