--- a/views/layouts/index.ejs
+++ b/views/layouts/index.ejs
@@ -31,9 +31,12 @@
   <!-- Custom -->
   <link rel="stylesheet" type="text/css" href="/css/style.css" />
 </head>
-<body>
+<body class="d-flex flex-column h-100">
   
   <%- body %>
+
+  <!-- footer-->
+  <%- include('../partials/footer') -%>
 
   <!-- JavaScript at end of body for optimized loading-->
   <!-- Bootstrap Javascript -->
