--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,10 @@
 <div class="container h-100">
   <div class="row align-items-center h-100">
     <div class="col-6 mx-auto">
-      <div class="card bg-light text-center" style="width: 26rem;">
 
+      <div class="card bg-light text-center" style="width: 26rem;">
         <div class="card-body">
-          <h2 class="card-title text-center mb-5">Log in to your account</h2>
+          <h2 class="card-title text-center mb-5"><%= polyglot.t("login.greetings")%></h2>
           <%- include('./partials/messages') -%>
 
           <!-- Github sign-in -->
@@ -50,7 +50,7 @@
                   id="email"
                   name="email"
                   class="form-control"
-                  placeholder="Email address"
+                  placeholder="<%= polyglot.t("login.email")%>"
                   required
                 />
               </div>
@@ -65,18 +65,22 @@
                   id="password"
                   name="password"
                   class="form-control"
-                  placeholder="Password"
+                  placeholder="<%= polyglot.t("login.password")%>"
                   required
                 />
               </div>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Login</button>
+            <button type="submit" class="btn btn-primary btn-block"><%= polyglot.t("login.login")%></button>
           </form>
         </div>
         <div class="card-footer">
-          <p class="lead">Don't have an account? <a href="/register">Sign Up</a></p>
+          <p class="lead"><%= polyglot.t("login.signup_msg")%> <a href="/register"><%= polyglot.t("login.signup")%></a></p>
+
+          <!-- Select Language -->
+          <%- include('./partials/locale') -%>
         </div>
       </div>
+      
     </div>
   </div>
 </div>
