--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,76 +4,79 @@
     <!-- Profile Form -->
     <form action="/profile/save" method="POST">
       <div class="form-group">
-        <label for="firstName">First name</label>
+        <label for="firstName"><%= polyglot.t("profile.first_name")%></label>
         <input
           type="name"
           id="firstName"
           name="firstName"
           class="form-control"
-          placeholder="First name"
+          placeholder="<%= polyglot.t("profile.first_name")%>"
           value="<%= typeof user.firstName != 'undefined' ? user.firstName : '' %>"
         />
       </div>
       <div class="form-group">
-        <label for="lastName">Last name</label>
+        <label for="lastName"><%= polyglot.t("profile.last_name")%></label>
         <input
           type="name"
           id="lastName"
           name="lastName"
           class="form-control"
-          placeholder="Last name"
+          placeholder="<%= polyglot.t("profile.last_name")%>"
           value="<%= typeof user.lastName != 'undefined' ? user.lastName : '' %>"
         />
       </div>
       <div class="form-group">
-        <label for="email">Email</label>
+        <label for="email"><%= polyglot.t("profile.email")%></label>
         <input
           type="email"
           id="email"
           name="email"
           class="form-control"
-          placeholder="Enter Email"
+          placeholder="<%= polyglot.t("profile.email")%>"
           value="<%= typeof user.email != 'undefined' ? user.email : '' %>"
         />
       </div>
       <div class="form-group">
-        <label for="password">Current Password</label>
+        <label for="password"><%= polyglot.t("profile.current_password")%></label>
         <input
           type="password"
           id="password0"
           name="password0"
           class="form-control"
+          placeholder="<%= polyglot.t("profile.current_password")%>"
           minlength="8" 
           maxlength="16" 
           value="<%= typeof password0 != 'undefined' ? password0 : '' %>"
         />
       </div>
       <div class="form-group">
-        <label for="password">New Password</label>
+        <label for="password"><%= polyglot.t("profile.new_password")%></label>
         <input
           type="password"
           id="password1"
           name="password1"
           class="form-control"
+          placeholder="<%= polyglot.t("profile.new_password")%>"
           minlength="8" 
           maxlength="16" 
           value="<%= typeof password1 != 'undefined' ? password1 : '' %>"
         />
       </div>
       <div class="form-group">
-        <label for="password2">Confirm New Password</label>
+        <label for="password2"><%= polyglot.t("profile.confirm_new_password")%></label>
         <input
           type="password"
           id="password2"
           name="password2"
           class="form-control"
+          placeholder="<%= polyglot.t("profile.confirm_new_password")%>"
           minlength="8" 
           maxlength="16" 
           value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
         />
       </div>
       <button type="submit" class="btn btn-primary btn-block">
-        Save
+        <%= polyglot.t("profile.save")%>
       </button>
     </form>
 
