Adds locale menu

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,15 @@
-<footer class="footer mt-auto py-1">
-  <div class="container text-center">
-    <a class="text-secondary" href="https://github.com/ray-hrst/connect_webapp">
-      <i class="fab fa-github"></i>
-    </a>
+<footer class="footer mt-auto">
+  <div class="d-flex align-items-center mx-2">
+    <!-- Locale -->
+    <div class="mr-auto p-2">
+      <%- include('./locale') -%>
+    </div>
+
+    <!-- Github -->
+    <div class="p-2">
+      <a class="text-secondary text-decoration-none" href="https://github.com/ray-hrst/connect_webapp">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
   </div>
 </footer>
