--- a/views/partials/locale.ejs
+++ b/views/partials/locale.ejs
@@ -1,6 +1,7 @@
 <div class="btn-group dropup">
-  <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <i class="fas fa-globe"></i>
+    <%= polyglot.t("language")%>
   </button>
   <div class="dropdown-menu">
     <a class="dropdown-item" href="/locale/en">English</a>
