Adds basic localization

--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -40,7 +40,7 @@
               />
             </div>
           </div>
-          <div class="col">
+          <!-- <div class="col">
             <div class="input-group">
               <div class="input-group-prepend">
                 <span class="input-group-text">Device</span>
@@ -50,7 +50,7 @@
                 <option>Raspberry Pi</option>
               </select>
             </div>
-          </div>
+          </div> -->
           <div class="col-auto">
             <button type="submit" class="btn btn-primary btn-block"><%= polyglot.t("devices.add")%></button>
           </div>
@@ -68,9 +68,6 @@
   </div>
 
 </master>
-
-<!-- footer-->
-<%- include('./partials/footer') -%>
 
 <!-- Custom -->
 <script type="text/javascript" src="/js/devices.js"></script>
