--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,7 +7,7 @@
 
     <!-- Github -->
     <div class="p-2">
-      <a class="text-secondary text-decoration-none" href="https://github.com/ray-hrst/connect_webapp">
+      <a class="text-secondary text-decoration-none" href="https://github.com/hapi-robo/connect-webapp" target="_blank">
         <i class="fab fa-github"></i>
       </a>
     </div>
