--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,9 +15,9 @@
       </div>
 
       <!-- Logs -->
-      <div class="p-2">
+<!--       <div class="p-2">
         <button class="btn btn-primary" type="button" id="btn-logs"><i class="fas fa-file-alt"></i></button>
-      </div>
+      </div> -->
 
       <!-- Go To Dropdown-->
       <div class="p-2">
