--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -20,9 +20,9 @@
         </div>
         <% } -%>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="/profile"><%= polyglot.t("navbar.profile")%></a>
+        <a class="dropdown-item disabled" href="/profile"><%= polyglot.t("navbar.profile")%></a>
         <a class="dropdown-item" href="/devices"><%= polyglot.t("navbar.devices")%></a>
-        <a class="dropdown-item disabled" href="#"><%= polyglot.t("navbar.settings")%></a>
+        <a class="dropdown-item" href="/settings"><%= polyglot.t("navbar.settings")%></a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="/logout"><i class="fas fa-sign-out-alt"></i> <%= polyglot.t("navbar.logout")%></a>
       </div>
