--- a/views/register.ejs
+++ b/views/register.ejs
@@ -68,15 +68,12 @@
               />
             </div>
             <button type="submit" class="btn btn-primary btn-block">
-              Register
+              <%= polyglot.t("register.register")%>
             </button>
           </form>
         </div>
         <div class="card-footer text-center">
-          <p class="lead"><%= polyglot.t("register.account_msg")%> <a href="/login"><%= polyglot.t("register.login")%></a></p>
-
-          <!-- Select Language -->
-          <%- include('./partials/locale') -%>
+          <p class="lead"><%= polyglot.t("register.account_msg")%> <a href="/login?locale=<%= polyglot.locale()%>"><%= polyglot.t("register.login")%></a></p>
         </div>
       </div>
     </div>
