Adds command parser

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,7 @@
           <h1 class="text-center mb-3"><%= polyglot.t("register.greetings")%></h1>
           <%- include('./partials/messages') -%>
           
-          <form action="/users/register" method="POST">
+          <form action="/register" method="POST">
             <div class="form-group">
               <label for="firstName"><%= polyglot.t("register.first_name")%></label>
               <input
